# overte

./: .gitignore  CMakeLists.txt  conanfile.py  hifi_qt.py  sonar-project.properties
.github/workflows/: build-overte.yml  linux_server_build.yml  master_build.yml  pr_build.yml  release_build.yml  sonarcloud.yml
cmake/: compiler.cmake
cmake/macros/: AutoScribeShader.cmake  PackageLibrariesForDeployment.cmake  SetupHifiLibrary.cmake  SetupHifiPlugin.cmake  SetupHifiProject.cmake  SetupHifiTestCase.cmake  SetupQt.cmake  SymlinkOrCopyDirectoryBesideTarget.cmake  TargetWebRTC.cmake
cmake/modules/: FindQt6LinguistToolsMacros.cmake
cmake/ports/discord-rpc/: CONTROL  portfile.cmake
cmake/ports/hifi-client-deps/: CONTROL
cmake/ports/node/: portfile.cmake
conan-recipes/tg_owt/: conanfile.py
conan-recipes/webrtc/all/: conanfile.py
interface/: CMakeLists.txt
launchers/qt/: CMakeLists.txt
libraries/audio-client/: CMakeLists.txt
libraries/embedded-webserver/src/: HTTPManager.cpp
libraries/model-serializers/src/: GLTFSerializer.cpp  GLTFSerializer.h  GLTFSerializer_Material.cpp  GLTFSerializer_Mesh.cpp  GLTFSerializer_VRM.cpp
libraries/networking/: CMakeLists.txt
libraries/networking/src/: LDAPAccount.cpp  LDAPAccount.h
libraries/render-utils/: CMakeLists.txt
libraries/script-engine/src/: FileScriptingInterface.cpp
libraries/shared/: CMakeLists.txt  find.py
libraries/shared/src/: ApplicationVersion.cpp  HifiConfigVariantMap.cpp  PathUtils.cpp  RunningMarker.cpp  SettingHelpers.h  SharedUtil.cpp  ShutdownEventListener.h
libraries/shared/src/shared/: FileLogger.cpp  FileUtils.cpp  JSONHelpers.cpp  PlatformHelper.h  StringHelpers.cpp  WebRTC.h
libraries/shared/src/shared/platform/: WinHelper.cpp
libraries/ui/: CMakeLists.txt
plugins/: CMakeLists.txt
tests/model-serializers/: CMakeLists.txt
tests/model-serializers/src/: VRMTests.cpp  (+1 more)
tools/: AutoScribeShader.py
tools/nitpick/: CMakeLists.txt
tools/tests/: test_AutoScribeShader.py
(+1 files in other folders)
